# boorufeed_itl

./: .gitignore  README.md  loop_config.yaml  pyproject.toml
sample-client/: client.py
sample-configs/: derpibooru-scraper.yaml  ponybooru-scraper.yaml  twibooru-scraper.yaml
src/boorufeed_itl/: __main__.py
