[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "boorufeed_itl"
version = "0.0.1"
authors = [
  { name="Synthbot Anon", email="synthbot.anon@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "scraper-itl"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

